# whisperx-project

./: .gitignore  README.md  compare.py  fastapi_app.py  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Auth.jsx  HistoryView.jsx  NavBar.jsx  ResultsView.jsx  UploadView.jsx  index.css  supabase.js  utils.jsx
